        fix:  problem with jmdns and big txt records (services with many variables)
        fix:  can now safely listen to one variable multiple times with proper notification (was sending multiple notifications to each listener)
        impr: now queries complete service description only when needed (was basically asking to every service)
        fix:  (gui) in case of subscription to remote variable changes, gui was not handling properly empty new value (it now does)

1.1.0
r2441
        fix:  default "class" variable value is now "Service" as intended
        fix:  getting a remote variable now properly ask the remote service (wrong caching policy)
        fix:  service xml description now uses proper castor version
        fix:  added a try catch around listener callbacks (was trusting listeners) (connector and variable listeners)
        fix:  listener added before connectTo are now properly listening
        fix:  connectors peer id where wrongly generated in some cases
        impr: (API) minor change adding a ConnectionRefused exception on Service#connectTo
        impr: (API) added ServiceRepository class
        impr: (API) added Service#sendReplyToMessage methods
        impr: sensible performance improvement on high bandwidth message receptions
        impr: performance improvement on Service initialisation
        impr: have different options to access dnssd (mdnsResponder, avahi, jmdns, custom proxy for lightweight devices)
        impr: added a default factory that smartly uses available dnssd provider (avahi then mdns then jmdns)
        impr: allows dnssd browser sharing to improve performance of applications using multiple browsers
        impr: cleaner affectation of peer id for searchs and connections before .start()
        impr: in order to handle mDNSResponder vs avahi daemons conflict happening on some configurations, the possible trailing "-2" on the hostname is removed when needed